--- a/1.html
+++ b/1.html
@@ -7,15 +7,15 @@
 
  <body>
    <p>
-     <a href="file:///C:/Users/82108/Desktop/WEB/Birth.html", target="_blank", title="chanlan; Birth"> <ol> <li>Birth </li> </a>
-     <a href="file:///C:/Users/82108/Desktop/WEB/infancy.html", target="_blank", title= "chanlan; infancy"> <li>infancy </li> </a>
-     <a href="file:///C:/Users/82108/Desktop/WEB/childhood.html", target="_blank", title="chanlan; childhood"> <li>childhood </li> </a>
-     <a href="file:///C:/Users/82108/Desktop/WEB/adolescence.html", target="_blank", title="chanlan; adolescence"> <li>adolescence </li> </a>
-     <a href="file:///C:/Users/82108/Desktop/WEB/adulthood.html", target="_blank", title="chanlan; adulthood"> <li>adulthood</li> </a>
+     <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/Birth.html", target="_blank", title="chanlan; Birth"> <ol> <li>Birth </li> </a>
+     <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/infancy.html", target="_blank", title= "chanlan; infancy"> <li>infancy </li> </a>
+     <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/childhood.html", target="_blank", title="chanlan; childhood"> <li>childhood </li> </a>
+     <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/adolescence.html", target="_blank", title="chanlan; adolescence"> <li>adolescence </li> </a>
+     <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/adulthood.html", target="_blank", title="chanlan; adulthood"> <li>adulthood</li> </a>
    </p>
   </ol>
 
-  <h1> <a href="file:///C:/Users/82108/Desktop/WEB/1.html">Hi. I'm Dahyun Kang!^^</a> </h1>
+  <h1> <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/1.html">Hi. I'm Dahyun Kang!^^</a> </h1>
   <h2> Welcome to my <u>webpage</u>!</h2>
   <h3> Nice to meet you.</h3>
 
