--- a/1.html
+++ b/1.html
@@ -12,15 +12,15 @@
      <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/childhood.html", target="_blank", title="chanlan; childhood"> <li>childhood </li> </a>
      <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/adolescence.html", target="_blank", title="chanlan; adolescence"> <li>adolescence </li> </a>
      <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/adulthood.html", target="_blank", title="chanlan; adulthood"> <li>adulthood</li> </a>
+    </ol>
    </p>
-  </ol>
 
   <h1> <a href="https://github.com/Chanlan2/Chanlan-s/blob/master/1.html">Hi. I'm Dahyun Kang!^^</a> </h1>
   <h2> Welcome to my <u>webpage</u>!</h2>
   <h3> Nice to meet you.</h3>
 
 
-  <img src="its me.jpg", width = 300, height = 300, alt = "190927 in seoul, Korea"> <br>
+  <img src="https://github.com/Chanlan2/Chanlan-s/blob/master/its%20me.jpg", width = 300, height = 300, alt = "190927 in seoul, Korea"> <br>
 
    What is <strong>'alt'</strong>?
  </body>
